--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+autopep8==1.3.4
 click==6.7
+flake8==3.5.0
 Flask==0.12.2
 itsdangerous==0.24
+jedi==0.11.1
 Jinja2==2.10
 MarkupSafe==1.0
+mccabe==0.6.1
+nltk==3.2.5
+parso==0.1.1
+pycodestyle==2.3.1
+pyflakes==1.6.0
+six==1.11.0
 Werkzeug==0.14.1
+yapf==0.21.0
